# pySnapCollate

./: .gitignore  README.md  pyproject.toml
pySnapCollate/: __init__.py  cli.py  core.py  utilities.py  utils.py
pySnapCollate/scripts/: daemon.py  export_from_pencil_snapshot.py
