[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pySnapCollate"
version = "0.5.3"
description = "A Python package to automatically collect distributed simulation output (snapshots) from PENCIL and combine data into non-parallel data files for easy archiving and analysis."
authors = [
    {name = "Thomas Hartlep", email = "hartlep@baeri.org"}
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "gitpython",
    "natsort"
]

[project.scripts]
pySnapCollate = "pySnapCollate.cli:main"

[tool.setuptools.packages.find]
include = ["pySnapCollate"]  # Packages to include
exclude = []  # Packages to exclude
